# GitYoink

./: .gitignore  README.md  install.py  pyproject.toml
repoyoink/: __init__.py  app.py  app.tcss  downloader.py  github_api.py  tree_model.py  widgets.py
