[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoyoink"
version = "1.0.0"
description = "Terminal-based selective GitHub repository downloader"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RepoYoink"},
]
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
repoyoink = "repoyoink.app:main"

[tool.setuptools.packages.find]
include = ["repoyoink*"]

[tool.setuptools.package-data]
repoyoink = ["*.tcss"]
